--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "npx webpack serve",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build":"npx webpack"
   },
   "keywords": [],
   "author": "",
