--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "npx webpack serve",
-    "build":"npx webpack"
+    "build":"npx webpack --mode=production"
   },
   "keywords": [],
   "author": "",
